@@ -199,18 +199,18 @@ final class XMLMapAttr implements Map {
         attrName = (String) keyValuePair[0];
 
         synchronized (this) {
-            attr = (Attr) map.get(attrName);
+            attr = map.get(attrName);
         }
 
         Object retVal = null;
         if (attr == null && origAttrName.startsWith("class:")) { // NOI18N
             synchronized (this) {
-                attr = (Attr) map.get(origAttrName.substring(6));
+                attr = map.get(origAttrName.substring(6));
             }
             retVal = attr != null ? attr.getType(params) : null;
         } else if (attr == null && origAttrName.startsWith("raw:")) { // NOI18N
             synchronized (this) {
-                attr = (Attr) map.get(origAttrName.substring(4));
+                attr = map.get(origAttrName.substring(4));
             }
             if (attr != null && attr.keyIndex == 9) {
                 return attr.methodValue(attr.value, params).getMethod();
@@ -343,7 +343,7 @@ final class XMLMapAttr implements Map {
 
         while (entryIter.hasNext()) {
             String attrName = (String) entryIter.next();
-            Attr attr = (Attr) map.get(attrName);
+            Attr attr = map.get(attrName);
 
             if (attr != null) {
                 attr.transformMe();
@@ -442,7 +442,7 @@ final class XMLMapAttr implements Map {
      * attribute a returns it as Object. Each Attr contains pair key and value. Key is type. Value is real value (in textual form) of this type.
      * Detailed describtion is in <A HREF="XMLMapAttr.html">XMLMapAttr<A>
      */
-    final static class Attr extends java.lang.Object {
+    static final class Attr extends java.lang.Object {
         // static final long serialVersionUID = -62733358015297232L;
         private static final String[] ALLOWED_ATTR_KEYS = {
             "bytevalue", "shortvalue", "intvalue", "longvalue", "floatvalue", "doublevalue", "boolvalue", "charvalue",
@@ -918,15 +918,15 @@ final class XMLMapAttr implements Map {
                 try {
                     switch (index) {
                     case 0:
-                        return new Byte(value);
+                        return Byte.valueOf(value);
                     case 1:
-                        return new Short(value);
+                        return Short.valueOf(value);
                     case 2:
                         return new Integer(value); //(objI);
                     case 3:
                         return new Long(value);
                     case 4:
-                        return new Float(value);
+                        return Float.valueOf(value);
                     case 5:
                         return new Double(value);
                     case 6:
@@ -1060,7 +1060,7 @@ final class XMLMapAttr implements Map {
          * Checks if key is valid
          * @return Index to array of allowed keys or -1 which means error.
          */
-        final static int isValid(String key) {
+        static final int isValid(String key) {
             int index = -1;
             int i;
             String[] strArray = getAttrTypes();
@@ -1108,7 +1108,7 @@ final class XMLMapAttr implements Map {
     static class ModifiedAttribute implements java.io.Serializable {
         /** generated Serialized Version UID */
         static final long serialVersionUID = 84214031923497718L;
-        private final static String[] fragments = new String[] { "transient:" }; //NOI18N
+        private static final String[] fragments = new String[] { "transient:" }; //NOI18N
         private int modifier = 0;
         private Object origAttrValue = null;
 
